Fixed Width for Vancouver skyline on iPhone 6 and 6+

--- a/style.css
+++ b/style.css
@@ -134,3 +134,9 @@ a {
         opacity: 0;
     }
 }
+@media (max-width: 700px) {
+    .vancouver {
+        width: 100%;
+        margin-left: 0;
+    }
+}
